# tiny-gpt

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bpe_tokenizer.py  docker-compose.yml  model.py  pyproject.toml  requirements.txt  trainer.py
apps/gradio/: README.md  app.py  requirements.txt
notebooks/: tiny_gpt_v1.py  tiny_gpt_v2.py  tiny_gpt_v3.py
scripts/: benchmark.py  evaluate.py  export_model.py  train.py  train_tokenizer.py
src/: dataset.py  generate.py  hf_model.py  model.py  pipeline.py  trainer.py
src/tiny_gpt/: bpe_tokenizer.py  configuration_tiny_gpt.py  dataset.py  hf_model.py  model.py  modeling_tiny_gpt.py  ref_model.py  ref_tokenizer.py  trainer.py
tests/: test_model.py  test_train_tokenizer.py  test_trainer.py
