[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny_gpt"
version = "0.1.0"
description = "An educational GPT implementation from scratch."
dependencies = [
    "torch==2.4.0",
    "transformers==5.12.1",
    "tokenizers==0.22.2",
    "huggingface_hub==1.20.1",
    "safetensors==0.8.0",
    "datasets",
    "gradio",
    "spaces"
]
